--- a/manifest.json
+++ b/manifest.json
@@ -10,10 +10,13 @@
   },
   "billingOptions": {
     "type": "free",
-    "availableCountries": ["*"]
+    "availableCountries": [
+      "*"
+    ]
   },
   "dependencies": {
     "syatt.b2b-organizations-graphql": "2.x",
+    "vtex.b2b-organizations-graphql": "0.x",
     "vtex.catalog-graphql": "1.x",
     "vtex.admin-graphql": "2.x",
     "vtex.store-graphql": "2.x",
