--- a/manifest.json
+++ b/manifest.json
@@ -10,7 +10,9 @@
   },
   "billingOptions": {
     "type": "free",
-    "availableCountries": ["*"]
+    "availableCountries": [
+      "*"
+    ]
   },
   "dependencies": {
     "vtex.b2b-organizations-graphql": "0.x",
